# OpenHands-Web

./: README.md  pyproject.toml
.github/workflows/: ghcr-build.yml  openhands-resolver.yml  pr-artifacts.yml  py-tests.yml
containers/app/: Dockerfile
enterprise/server/routes/: org_models.py
enterprise/storage/: org_service.py  org_store.py  user_settings.py
enterprise/sync/: README.md  resend_keycloak.py
enterprise/tests/unit/: test_org_store.py
enterprise/tests/unit/server/routes/: test_users_v1.py
enterprise/tests/unit/sync/: test_resend_keycloak.py
frontend/: package-lock.json  package.json
openhands/app_server/settings/: settings_router.py
openhands/microagent/: microagent.py
openhands/storage/data_models/: settings.py
tests/unit/app_server/: test_live_status_app_conversation_service.py  test_sandbox_secrets_router.py  test_settings_api.py
tests/unit/core/config/: test_mcp_settings_merge.py
tests/unit/mcp/: test_mcp_integration.py
tests/unit/server/routes/: test_settings_store_functions.py
tests/unit/storage/data_models/: test_settings.py
tests/unit/storage/settings/: test_file_settings_store.py
