[build-system]
build-backend = "poetry.core.masonry.api"
# PEP 621 project metadata (for UV compatibility)
# This section coexists with [tool.poetry] during the migration period
requires = [ "poetry-core" ]

[project]
name = "openhands-ai"
description = "OpenHands: Code Less, Make More"
readme = "README.md"
license = "MIT"
authors = [ { name = "OpenHands", email = "contact@all-hands.dev" } ]
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# Version is managed dynamically by poetry-dynamic-versioning
dynamic = [ "version" ]
# Main dependencies (mirrors [tool.poetry.dependencies] for UV compatibility)
dependencies = [
  "aiohttp==3.13.4",
  "anthropic[vertex]",
  "anyio==4.9",
  "asyncpg>=0.30",
  "authlib>=1.6.9",
  "bashlex>=0.18",
  "boto3",
  "browsergym-core==0.13.3",
  "deprecated",
  "deprecation>=2.1",
  "dirhash",
  "docker",
  "fastapi",
  "fastmcp>=3.2,<4",
  "google-api-python-client>=2.164",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "google-cloud-aiplatform",
  "google-genai",
  "html2text",
  "httpx-aiohttp>=0.1.8",
  "ipywidgets>=8.1.5",
  "jinja2>=3.1.6",
  "joblib",
  "json-repair",
  "jupyter-kernel-gateway",
  "jwcrypto>=1.5.6",
  "kubernetes>=33.1",
  "libtmux>=0.46.2",
  "litellm==1.84.1",
  "lmnr>=0.7.20",
  "mcp>=1.25",
  "memory-profiler>=0.61",
  "numpy",
  "openai==2.33",
  "openhands-aci==0.3.3",
  "openhands-agent-server==1.17",
  "openhands-sdk==1.17",
  "openhands-tools==1.17",
  "opentelemetry-api>=1.33.1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.33.1",
  "orjson>=3.11.6",
  "pathspec>=0.12.1",
  "pexpect",
  "pg8000>=1.31.5",
  "pillow>=12.1.1",
  "playwright>=1.55",
  "poetry>=2.3.3",
  "prompt-toolkit>=3.0.50",
  "protobuf>=5.29.6,<6",
  "psutil",
  "pybase62>=1",
  "pygithub>=2.5",
  "pyjwt>=2.12",
  "pylatexenc",
  "pypdf>=6.9.2",
  "python-docx",
  "python-dotenv",
  "python-frontmatter>=1.1",
  "python-json-logger>=3.2.1",
  "python-multipart>=0.0.22",
  "python-pptx",
  "python-socketio==5.14",
  "pythonnet; sys_platform=='win32'",
  "pyyaml>=6.0.2",
  "qtconsole>=5.6.1",
  "rapidfuzz>=3.9",
  "redis>=5.2,<7",
  "requests>=2.33",
  "setuptools>=78.1.1",
  "shellingham>=1.5.4",
  "sqlalchemy[asyncio]>=2.0.40",
  "sse-starlette>=3.0.2",
  "starlette>=0.49.1",
  "tenacity>=8.5,<10",
  "termcolor",
  "toml",
  "tornado>=6.5",
  "types-toml",
  "urllib3>=2.6.3",
  "uvicorn",
  "whatthepatch>=1.0.6",
  "zope-interface==7.2",
]
optional-dependencies.third-party-runtimes = [
  "daytona==0.24.2",
  "e2b-code-interpreter>=2",
  "modal>=0.66.26,<1.2",
  "runloop-api-client==0.50",
]
urls.Homepage = "https://github.com/OpenHands/OpenHands"
urls.Repository = "https://github.com/OpenHands/OpenHands"

[dependency-groups]
dev = [
  "build",
  "mypy==1.17",
  "pre-commit==4.2",
  "pytest>=8.4",
  "pytest-asyncio>=1.3",
  "ruff==0.12.5",
  "types-setuptools",
]
test = [
  "gevent>=24.2.1,<26",
  "pandas",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-forked",
  "pytest-playwright>=0.7",
  "pytest-timeout>=2.4",
  "pytest-xdist",
  "reportlab",
]
runtime = [
  "flake8",
  "jupyterlab",
  "notebook",
]

[tool.poetry]
name = "openhands-ai"
version = "1.6.0"
description = "OpenHands: Code Less, Make More"
authors = [ "OpenHands" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenHands/OpenHands"
packages = [
  { include = "openhands/**/*" },
  { include = "third_party/**/*" },
  { include = "pyproject.toml", to = "openhands" },
  { include = "poetry.lock", to = "openhands" },
]
include = [
  "skills/**/*",
]
dependencies.python = "^3.12,<3.14"
dependencies.authlib = ">=1.6.9" # CVE-2026-27962 (fixed in 1.6.9)
dependencies.orjson = ">=3.11.6" # Pinned to fix CVE-2025-67221
dependencies.litellm = "1.84.1" # pinned to the requested LiteLLM incident-fix version
dependencies.openai = "2.33.0" # Pin because litellm 1.84.1 requires 2.33.0 (BerriAI/litellm#13711)
dependencies.aiohttp = "3.13.4" # Pin because litellm 1.84.1 requires 3.13.4
dependencies.google-genai = "*" # To use litellm with Gemini Pro API
dependencies.google-api-python-client = "^2.164.0" # For Google Sheets API
dependencies.google-auth-httplib2 = "*" # For Google Sheets authentication
dependencies.google-auth-oauthlib = "*" # For Google Sheets OAuth
dependencies.termcolor = "*"
dependencies.docker = "*"
dependencies.fastapi = "*"
dependencies.toml = "*"
dependencies.types-toml = "*"
dependencies.uvicorn = "*"
dependencies.numpy = "*"
dependencies.json-repair = "*"
dependencies.browsergym-core = "0.13.3" # integrate browsergym-core as the browsing interface
dependencies.playwright = "^1.55.0"
dependencies.html2text = "*"
dependencies.deprecated = "*"
dependencies.pexpect = "*"
dependencies.jinja2 = "^3.1.6"
dependencies.python-multipart = ">=0.0.22"
dependencies.tenacity = ">=8.5,<10.0"
dependencies.zope-interface = "7.2"
dependencies.pathspec = ">=0.12.1,<1.1.0"
dependencies.pyjwt = "^2.12.0"
dependencies.dirhash = "*"
dependencies.tornado = ">=6.5"
dependencies.python-dotenv = "*"
dependencies.rapidfuzz = "^3.9.0"
dependencies.whatthepatch = "^1.0.6"
dependencies.protobuf = ">=5.29.6,<6.0.0" # Updated to fix CVE-2026-0994
dependencies.opentelemetry-api = "^1.33.1"
dependencies.opentelemetry-exporter-otlp-proto-grpc = "^1.33.1"
dependencies.libtmux = ">=0.46.2"
dependencies.pygithub = "^2.5.0"
dependencies.joblib = "*"
dependencies.openhands-aci = "0.3.3"
dependencies.python-socketio = "5.14.0"
dependencies.sse-starlette = "^3.0.2"
dependencies.psutil = "*"
dependencies.python-json-logger = ">=3.2.1,<5.0.0"
dependencies.prompt-toolkit = "^3.0.50"
dependencies.poetry = "^2.3.3"
dependencies.anyio = "4.9.0"
dependencies.pythonnet = { version = "*", markers = "sys_platform == 'win32'" }
dependencies.fastmcp = ">=3.2,<4"
dependencies.python-frontmatter = "^1.1.0"
dependencies.shellingham = "^1.5.4"
# TODO: Should these go into the runtime group?
dependencies.ipywidgets = "^8.1.5"
dependencies.qtconsole = "^5.6.1"
dependencies.python-pptx = "*"
dependencies.pylatexenc = "*"
dependencies.python-docx = "*"
dependencies.bashlex = "^0.18"
# Explicitly pinned packages for latest versions
dependencies.pypdf = "^6.9.2"
dependencies.pillow = "^12.1.1"
dependencies.starlette = ">=0.49.1,<1.1.0"
dependencies.urllib3 = "^2.6.3"
dependencies.requests = "^2.33.0"
dependencies.setuptools = ">=78.1.1"
# TODO: These are integrations that should probably be optional
dependencies.redis = ">=5.2,<7.0"
dependencies.google-cloud-aiplatform = "*"
dependencies.anthropic = { extras = [ "vertex" ], version = "*" }
dependencies.boto3 = "*"
dependencies.kubernetes = ">=33.1,<36.0"
dependencies.pyyaml = "^6.0.2"
dependencies.memory-profiler = "^0.61.0"
dependencies.jupyter_kernel_gateway = "*"
# Third-party runtime dependencies (optional)
dependencies.modal = { version = ">=0.66.26,<1.2.0", optional = true }
dependencies.runloop-api-client = { version = "0.50.0", optional = true }
dependencies.daytona = { version = "0.24.2", optional = true }
dependencies.httpx-aiohttp = "^0.1.8"
dependencies.e2b-code-interpreter = { version = "^2.0.0", optional = true }
dependencies.pybase62 = "^1.0.0"
# V1 dependencies
dependencies.openhands-sdk = "1.17.0"
dependencies.openhands-agent-server = "1.17.0"
dependencies.openhands-tools = "1.17.0"
dependencies.jwcrypto = ">=1.5.6"
dependencies.sqlalchemy = { extras = [ "asyncio" ], version = "^2.0.40" }
dependencies.pg8000 = "^1.31.5"
dependencies.asyncpg = ">=0.30,<0.32"
dependencies.deprecation = "^2.1.0"
dependencies.lmnr = "^0.7.20"
extras.third_party_runtimes = [ "e2b-code-interpreter", "modal", "runloop-api-client", "daytona" ]
group.dev.optional = true
group.dev.dependencies.ruff = "0.12.5"
group.dev.dependencies.mypy = "1.17.0"
group.dev.dependencies.pre-commit = "4.2.0"
group.dev.dependencies.build = "*"
group.dev.dependencies.types-setuptools = "*"
group.dev.dependencies.pytest = ">=8.4,<10.0"
group.dev.dependencies.pytest-asyncio = "^1.3.0"
group.runtime.optional = true
group.runtime.dependencies.jupyterlab = "*"
group.runtime.dependencies.notebook = "*"
group.runtime.dependencies.flake8 = "*"
group.test.optional = true
group.test.dependencies.pytest = "*"
group.test.dependencies.pytest-cov = "*"
group.test.dependencies.pytest-asyncio = "*"
group.test.dependencies.pytest-forked = "*"
group.test.dependencies.pytest-xdist = "*"
group.test.dependencies.pytest-playwright = "^0.7.0"
group.test.dependencies.pytest-timeout = "^2.4.0"
group.test.dependencies.pandas = "*"
group.test.dependencies.reportlab = "*"
group.test.dependencies.gevent = ">=24.2.1,<26.0.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.autopep8]
# autopep8 fights with mypy on line length issue
ignore = [ "E501" ]

[tool.black]
# prevent black (if installed) from changing single quotes to double quotes
skip-string-normalization = true

[tool.ruff]
lint.select = [ "D" ]
# ignore warnings for missing docstrings
lint.ignore = [ "D1" ]
lint.pydocstyle.convention = "google"

[tool.coverage]
run.concurrency = [ "gevent" ]
run.omit = [ "**/test_*", "enterprise/tests/*" ]
run.relative_files = true
